test/types/enum/deitz/test_enum6.good
test_enum6.chpl:7: error: enumerator 'NEG' is not an int parameter
